			CHANGES IN ADEGENET VERSION 2.1.2
NEW FEATURES
  - While creating genind from dataframe, it is now possible to skip
    the test of the ploidy that was added in 2.1.1 by passing the option
    check.ploidy = FALSE to the function df2genind. See 
    https://github.com/thibautjombart/adegenet/issues/231 and
    https://github.com/thibautjombart/adegenet/pull/232 for details

			CHANGES IN ADEGENET VERSION 2.1.1
BUG FIXES
  - A warning will be issued if the user specifies a ploidy range that is less
    than the observed allele dosage when data is imported by df2genind. See
    https://github.com/thibautjombart/adegenet/issues/216 for details.

			CHANGES IN ADEGENET VERSION 2.1.0
NEW FEATURES
	- new set of functions implementing 'snapclust' for genetic
	clustering using fast maximum-likelihood estimation; new functions
	include: `snapclust`, `snapclust.choose.k`, and methods for `AIC`,
	`AICc`, `BIC`, `KIC`

	- compoplot is now a generic with methods for different objects,
	including dapc and snapclust

	- spca is now a generic with methods for genind, data.frame and
	genlight objects

	- a new generic wrapper `export_to_mvmapper` has been added, which
	exports multivariate analyses (e.g. DAPC, sPCA, or standard dudi
	objects) with geo-referenced units to serve as input to mvmapper
	(https://popphylotools.github.io/mvMapper/)

	- the new function `spca_randtest` implements a Monte Carlo test
	for spatial structure in the sPCA framework.

BUG FIXES
	- fixed registration of C routines which could cause problems with
	SNPbin and genlight objects.

	- fixed issues relating to `read.PLINK` and the reading of `.map`
	files (issues 94 and 188)

	- fixed issues relating xvalDapc with non-table objects by registering
	methods for genind and genlight object (issue 193)

	- find.clusters with clust parameter will no longer throw an error
	when attempting to find clusters of populations with fewer than
	n/10 individuals (issue 184)



			CHANGES IN ADEGENET VERSION 2.0.2